# ShadPS4Dump

./: .gitignore  BUILD.md  CMakeLists.txt  README.md
.github/workflows/: build.yml
build-test/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  ShadPS4PkgPlugin.sln  ShadPS4PkgPlugin.vcxproj  ShadPS4PkgPlugin.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  extract_pkg.vcxproj  extract_pkg.vcxproj.filters
build-test/.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-Release.cmake  QtDeployTargets-Debug.cmake  QtDeployTargets-Release.cmake
build-test/ShadPS4PkgPlugin.dir/Release/: version.dll.recipe
build-test/ShadPS4PkgPlugin.dir/Release/ShadPS4PkgPlugin.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build-test/ShadPS4PkgPlugin_autogen/include_Release/: patch_browser_dialog.moc  patch_browser_dialog.moc.d  patch_install_dialog.moc  patch_install_dialog.moc.d  pkg_install_dialog.moc  pkg_install_dialog.moc.d  qt_directory_hook.moc  qt_directory_hook.moc.d
build-test/ShadPs4Plus/ShadPs4Plus-PkgExtractor-1.1-windows/: install_pkg.bat  readme_windows.txt
build-test/extract_pkg.dir/Release/: extract_pkg.exe.recipe
build-test/extract_pkg.dir/Release/extract_pkg.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  extract_pkg.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build-test/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
build-test/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog
build-test/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
build-test/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
cmake/: FetchCryptoPP.cmake  FetchWebView2.cmake  FindLauncherQt.cmake  PickProxyDll.cmake
src/: plugin_module.cpp  plugin_module.h
src/config/: shad_config.cpp  shad_config.h
src/hook/: menu_hook.cpp  menu_hook.h  qt_directory_hook.cpp  qt_directory_hook.h  qt_launcher_util.cpp  qt_launcher_util.h  qt_menu_hook.cpp  qt_menu_hook.h  window_finder.cpp  window_finder.h
src/install/: pkg_install_dialog.cpp  pkg_install_dialog.h  pkg_install_progress_win32.cpp  pkg_install_progress_win32.h  pkg_installer.cpp  pkg_installer.h  pkg_merge.cpp  pkg_merge.h  pkg_passcode.cpp  pkg_passcode.h  pkg_router.cpp  pkg_router.h
src/orbispatches/: orbispatches_client.cpp  orbispatches_client.h  orbispatches_common.cpp  orbispatches_common.h  patch_browser_dialog.cpp  patch_browser_dialog.h  patch_download_panel.cpp  patch_download_panel.h  patch_http_download.cpp  patch_http_download.h  patch_install_dialog.cpp  patch_install_dialog.h  patch_link_fetcher.cpp  patch_link_fetcher.h  patch_webview_download.cpp  patch_webview_download.h
src/pkg/common/: assert.cpp  io_file.cpp  path_util.cpp
src/pkg/common/logging/: backend.cpp  backend.h  filter.h  log.h
src/pkg/core/: loader.cpp  loader.h
src/pkg/core/crypto/: crypto.cpp  crypto.h
src/pkg/core/file_format/: pkg.cpp  pkg.h  pkg_type.cpp
src/proxy/: dllmain.cpp
tools/: extract_pkg.cpp
